--- a/ellem.css
+++ b/ellem.css
@@ -1,67 +1,37 @@
 
-        body{
-            background-color:black       }
-        
-        header
-        {
-            padding-top:1.875rem;
+        body{background-color:black;}
+        header{padding-top:1.875rem;
             min-height:4.375rem;
             background-color:black;
             color:white;
             border-bottom:pink 3px solid; 
             margin:auto;
-            Text-align:center;
-            
-                  
-                  }
-        header h1{
+            Text-align:center;}
+        header h1{padding:1.875rem;
+                  Text-align:center;
+                  color:white;
+                  font-weight:bold;}
+        ul,li{display:inline;
+        Text-align:center;} 
         
+        header a{text-decoration:none;
+                color:white;
+                Text-align:center;
+                Padding:1rem;}
+          img{max-width:100%;}
+       
         
-        padding:1.875rem;
-        
-       Text-align:center;
-       color:white;
-       font-weight:bold;           
-        }
-        
-      ul,li {
-        display:inline;
-        Text-align:center;
-   } 
-        
-        header a {
-           text-decoration:none;
-           color: white;
-          Text-align:center;
-          Padding:1rem;
-
-        }
-        
-        .try{
-            padding:3.125rem;
-            color: white;
+        .try{padding:3.125rem;
+            color:white;
             background-color:black;
-            Text-align:center;
-           
-                    }
+            Text-align:center;}
             
-            .hr{
-            border-bottom:pink 50px solid;
-                
-                
-            }
+            .hr{border-bottom:pink 50px solid;}
             
-           span {
-        color:pink;
-        font-family: 'Brush Script MT',cursive;}
-       
-       
-       img{ 
-max-width:100%;
-}
-       
-        footer{
-            background-color:brown;
+           span{color:pink;
+                font-family:'Brush Script MT',cursive;}
+            
+        footer{background-color:brown;
             Text-align:center;
             padding:3.125rem;       }
   
