--- a/ellem.css
+++ b/ellem.css
@@ -21,7 +21,7 @@
           img{max-width:50%;}
        
         
-        .try{padding:3.125rem;
+        .showcase{padding:3.125rem;
             color:white;
             background-color:black;
             Text-align:center;}
