--- a/ellem.css
+++ b/ellem.css
@@ -15,7 +15,7 @@ header{min-height:4.375rem;
                 color:white;
                 Text-align:center;
                 Padding:1rem;}
-          .showcase img{max-width:50%;}
+          img{max-width:50%;}
        
         
         .showcase{padding:3.125rem;
