--- a/elle.css
+++ b/elle.css
@@ -298,4 +298,20 @@ Text-align:center;}
   width: 160px;
   border: 3px solid white;
  height: 25vh;
+}.space {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
+
+
+footer {
+    background-color: #f2f2f2;
+    adding: 20px;
+    text-align: center;
+    margin-top: auto; /* Pushes the footer to the bottom */
+    position: sticky; /* Makes the footer stick to the bottom */
+    bottom: 0; /* Positions the footer at the bottom of the screen */
+    width: 100%; /* Ensures the footer spans the full width of the screen */
+    z-index: 2;
+       }
